--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "start-electron": "concurrently -k \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "dist": "npm run build && electron-builder"
