--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist": "npm run build && electron-builder"
   },
   "dependencies": {
-    "@google/genai": "^0.1.0",
+    "@google/generative-ai": "^0.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
